--- a/shared.css
+++ b/shared.css
@@ -64,3 +64,26 @@ header ul a {
     text-decoration: none;
 }
 
+footer {
+    background: linear-gradient(70deg,rgb(24,24,24),rgb(29,29,29));
+    padding:36px;
+}
+
+footer ul {
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+   
+}
+
+footer li {
+    width: 80px;
+    height: 80px;
+    margin:0 50px;
+    
+}
+
+footer img {
+    width: 100%;
+    height: 100%;
+}
