--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 #hero-content {
     width: 800px;
+    
     background-color: rgba(51, 47, 47,0.8);
     box-shadow: 2px 4px 8px rgb(68,67,67);
     border-radius: 8px;
@@ -49,6 +50,13 @@
     background-color: rgb(255,238,0);
 
 }
+
+#higlights {
+    padding: 24px;
+    background: linear-gradient(0deg,rgb(227, 255, 253),rgb(202, 243, 240));
+
+}
+
 #higlights h2{
     text-align: center;
     text-transform: uppercase;
@@ -65,18 +73,19 @@
     display: flex;
     flex-direction: row;
     justify-content:center;
-  
 
+}
+
+#destinations {
+padding: 0;
 
 }
 
 .destination {
     margin: 0 20px;
     width:600px;
-    
-   
-  
 }
+
 .destination p {
     text-align: center;
     font-size: 24px;
@@ -87,7 +96,7 @@
 }
 
 .destination img {
-    height:400px;
+    height:300px;
     width: 100%;
     box-shadow:  2px 4px 8px rgb(68,67,67);
     border-radius: 10px;
